added numbering in video titles.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#1) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/450/tech"
 	});
 	});
@@ -118,7 +118,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#2) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/451/tech"
 	});
 	// repeat videos for filling...
@@ -128,7 +128,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#3) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/450/tech"
 	});
 	});
@@ -139,7 +139,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#4) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/451/tech"
 	});
 	jwplayer("video_5").setup({
@@ -148,7 +148,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#5) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/450/tech"
 	});
 	});
@@ -159,7 +159,7 @@ jQuery(document).ready(function($) {
 		width: 590,
 		height: 400,
 		stretching: "fill",
-		title: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
+		title: "(#6) Lorem ipsum dolor sit amet, consectetuer adipiscing elit",
 		image: "https://placeimg.com/610/451/tech"
 	});
 	
